src/example-voting-app/k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/vote"
        backend:
          service:
            name: vote
            port:
              number: 5000
      - pathType: Prefix
        path: "/result"
        backend:
          service:
            name: result
            port:
              number: 5001
